// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticate Invalid Password 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`authenticate Invalid Password 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "authenticating",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
}
`;

exports[`authenticate Network Error 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
]
`;

exports[`authenticate Network Error 2`] = `
Object {
  "login": Object {
    "error": "Error: Network Error",
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "authenticating",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
}
`;

exports[`authenticate Successfully 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`authenticate Successfully 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "authenticating",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
}
`;

exports[`cancelLogin Cancelling from the authenticating state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`cancelLogin Cancelling from the authenticating state 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
}
`;

exports[`cancelLogin Cancelling from the initial state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`cancelLogin Cancelling from the initial state 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
}
`;

exports[`cancelLogin Cancelling from the registering state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`cancelLogin Cancelling from the registering state 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
}
`;

exports[`checkUsername When the server call fails 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`checkUsername When the server call fails 2`] = `
Object {
  "login": Object {
    "error": "Error: Network Error",
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
}
`;

exports[`checkUsername When the username is known 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "authenticating",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "authenticating",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "testuser",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "testuser",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`checkUsername When the username is known 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "authenticating",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": "testuser",
  },
}
`;

exports[`checkUsername When the username is not known 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "registering",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "registering",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "testuser",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "testuser",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`checkUsername When the username is not known 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "registering",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": "testuser",
  },
}
`;

exports[`register Invalid Password 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`register Invalid Password 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "registering",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
}
`;

exports[`register Network Error 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "Error: Network Error",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
]
`;

exports[`register Network Error 2`] = `
Object {
  "login": Object {
    "error": "Error: Network Error",
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "registering",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
}
`;

exports[`register Successfully 1`] = `
Array [
  Object {
    "args": Array [
      true,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
]
`;

exports[`register Successfully 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "registering",
      "initial": [Function],
      "registering": [Function],
    },
    "username": null,
  },
}
`;

exports[`resetLogin Resetting from the authenticating state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`resetLogin Resetting from the authenticating state 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
}
`;

exports[`resetLogin Resetting from the initial state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`resetLogin Resetting from the initial state 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
}
`;

exports[`resetLogin Resetting from the registering state 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`resetLogin Resetting from the registering state 2`] = `
Object {
  "login": Object {
    "error": null,
    "loading": false,
    "mode": StateMachine {
      "authenticating": [Function],
      "current": "initial",
      "initial": [Function],
      "registering": [Function],
      Symbol(CURRENT_EXIT): undefined,
    },
    "username": null,
  },
}
`;
